Modificaciones de la clase M2M para poder crear los paquetes y clases
Tambien se creo la clase M2T y algunos metodos necesarios (No esta del todo funcinoal)

--- a/ws/diagrama_abstracta.edit/plugin.properties
+++ b/ws/diagrama_abstracta.edit/plugin.properties
@@ -58,3 +58,5 @@ _UI_MKJHerencia_source_feature = Source
 _UI_MKJHerencia_target_feature = Target
 _UI_MKJInterface_source_feature = Source
 _UI_MKJInterface_target_feature = Target
+_UI_ModelFactory_listaTodasLasClases_feature = Lista Todas Las Clases
+_UI_ModelFactory_listaTodosLosPaquetes_feature = Lista Todos Los Paquetes
