--- a/ws/diagrama_abstracta.edit/plugin.properties
+++ b/ws/diagrama_abstracta.edit/plugin.properties
@@ -62,3 +62,6 @@ _UI_ModelFactory_listaTodasLasClases_feature = Lista Todas Las Clases
 _UI_ModelFactory_listaTodosLosPaquetes_feature = Lista Todos Los Paquetes
 _UI_MKJClase_nombre_feature = Nombre
 _UI_MKJRelacion_nombre_feature = Nombre
+_UI_MKJMetodo_semantics_feature = Semantics
+_UI_MKJClase_herencias_feature = Herencias
+_UI_MKJClase_interfaces_feature = Interfaces
