Se inicia la transformacion abtrasta a abstracta

--- a/ws/diagrama_abstracta.edit/plugin.properties
+++ b/ws/diagrama_abstracta.edit/plugin.properties
@@ -65,3 +65,7 @@ _UI_MKJRelacion_nombre_feature = Nombre
 _UI_MKJMetodo_semantics_feature = Semantics
 _UI_MKJClase_herencias_feature = Herencias
 _UI_MKJClase_interfaces_feature = Interfaces
+_UI_MKJClase_primaryKey_feature = Primary Key
+_UI_MKJClase_foreignKey_feature = Foreign Key
+_UI_MKJAtributo_primaryKey_feature = Primary Key
+_UI_MKJAtributo_foreignKey_feature = Foreign Key
