--- a/ws/diagrama_concreta.edit/plugin.properties
+++ b/ws/diagrama_concreta.edit/plugin.properties
@@ -69,3 +69,5 @@ _UI_MKJInterface_source_feature = Source
 _UI_MKJInterface_target_feature = Target
 _UI_Unknown_feature = Unspecified
 
+_UI_MKJAtributo_primaryKey_feature = Primary Key
+_UI_MKJAtributo_foreignKey_feature = Foreign Key
