--- a/ws/diagrama_abstracta.edit/plugin.properties
+++ b/ws/diagrama_abstracta.edit/plugin.properties
@@ -69,3 +69,9 @@ _UI_MKJClase_primaryKey_feature = Primary Key
 _UI_MKJClase_foreignKey_feature = Foreign Key
 _UI_MKJAtributo_primaryKey_feature = Primary Key
 _UI_MKJAtributo_foreignKey_feature = Foreign Key
+_UI_MKJAsociacion_type = MKJ Asociacion
+_UI_ModelFactory_listaAsociaciones_feature = Lista Asociaciones
+_UI_ModelFactory_listaConteiments_feature = Lista Conteiments
+_UI_ModelFactory_listaAgregaciones_feature = Lista Agregaciones
+_UI_ModelFactory_listaHerencias_feature = Lista Herencias
+_UI_ModelFactory_listaInterfaces_feature = Lista Interfaces
