Tranformacion ATA: adelantada en su mayoria, quedan pendientes la interface y detalles minimos

--- a/ws/diagrama_abstracta.edit/plugin.properties
+++ b/ws/diagrama_abstracta.edit/plugin.properties
@@ -75,3 +75,7 @@ _UI_ModelFactory_listaConteiments_feature = Lista Conteiments
 _UI_ModelFactory_listaAgregaciones_feature = Lista Agregaciones
 _UI_ModelFactory_listaHerencias_feature = Lista Herencias
 _UI_ModelFactory_listaInterfaces_feature = Lista Interfaces
+_UI_MKJAtributo_type_feature = Type
+_UI_MKJAtributo_notNull_feature = Not Null
+_UI_MKJAtributo_uniqueData_feature = Unique Data
+_UI_MKJAtributo_autoIncrement_feature = Auto Increment
