--- a/ws/diagrama_concreta.edit/plugin.properties
+++ b/ws/diagrama_concreta.edit/plugin.properties
@@ -71,3 +71,7 @@ _UI_Unknown_feature = Unspecified
 
 _UI_MKJAtributo_primaryKey_feature = Primary Key
 _UI_MKJAtributo_foreignKey_feature = Foreign Key
+_UI_MKJAtributo_type_feature = Type
+_UI_MKJAtributo_notNull_feature = Not Null
+_UI_MKJAtributo_uniqueData_feature = Unique Data
+_UI_MKJAtributo_autoIncrement_feature = Auto Increment
