Generacion de codigo SQL (Esta pendiente el apartado de las llavs foraneas por generar)

--- a/ws/bd.edit/plugin.properties
+++ b/ws/bd.edit/plugin.properties
@@ -58,3 +58,4 @@ _UI_PrimaryKey_type_feature = Type
 _UI_PrimaryKey_name_feature = Name
 _UI_PrimaryKey_autoIncrement_feature = Auto Increment
 _UI_ForeignKey_tableReferenced_feature = Table Referenced
+_UI_ModelFactory_listaTablas_feature = Lista Tablas
